apps/immich/base/immich-machine-learning-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: immich-machine-learning
  namespace: immich
spec:
  selector:
    app: immich-machine-learning
  ports:
  - port: 3003
    targetPort: 3003
    protocol: TCP
